--- a/ACCBroadcaster/Properties/Settings.settings
+++ b/ACCBroadcaster/Properties/Settings.settings
@@ -26,5 +26,8 @@
     <Setting Name="CustomReplayLength" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">5</Value>
     </Setting>
+    <Setting Name="Theme" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
